--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,8 @@
     <div>Made by <a target="_blank" href="https://twitter.com/hendrysadrak">@hendrysadrak</a></div>
 </section>
 
+<script src="js/google-analytics-bundle.js"></script>
+
 <script src="js/jquery3a1.js"></script>
 <script src="js/popup.js"></script>
 
