--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 
 <section class="row info-wrap">
     <div><a class="js-settings" href="#settings">Settings</a></div>
-    <div>Made by <a target="_blank" href="https://twitter.com/hendrysadrak">@hendrysadrak</a></div>
+    <div>Made by <a target="_blank" class="js-author" href="https://twitter.com/hendrysadrak">@hendrysadrak</a></div>
 </section>
 
 <script src="js/google-analytics-bundle.js"></script>
