<add not open error, add song name, 1.1.5

--- a/popup.html
+++ b/popup.html
@@ -8,16 +8,29 @@
 </head>
 <body>
 
-<section class="row control-wrap">
-    <button data-type="prev" title="Previous" class="btn ripple btn-control btn-prev">Previous</button>
-    <button data-type="pause" title="Play" class="btn ripple btn-control btn-pause">Play / Pause</button>
-    <button data-type="next" title="Naxt" class="btn ripple btn-control btn-next">Next</button>
+<section class="pop error error-1 js-error-1">
+    <div class="wrap">
+        Open SoundCloud to use the controls.
+    </div>
 </section>
 
-<section class="row info-wrap">
-    <div><a class="js-settings" href="#settings">Settings</a></div>
-    <div>Made by <a target="_blank" class="js-author" href="https://twitter.com/hendrysadrak">@hendrysadrak</a></div>
-</section>
+<main>
+    <section class="row song-wrap">
+        <div class="song js-song"></div>
+    </section>
+
+    <section class="row control-wrap">
+        <button data-type="prev" title="Previous" class="btn ripple btn-control btn-prev">Previous</button>
+        <button data-type="pause" title="Play" class="btn ripple btn-control btn-pause">Play / Pause</button>
+        <button data-type="next" title="Naxt" class="btn ripple btn-control btn-next">Next</button>
+    </section>
+
+    <section class="row info-wrap">
+        <div><a class="js-settings" href="#settings">Settings</a></div>
+        <div>Made by <a target="_blank" class="js-author" href="https://twitter.com/hendrysadrak">@hendrysadrak</a>
+        </div>
+    </section>
+</main>
 
 <script src="js/google-analytics-bundle.js"></script>
 
