--- a/src/popup.html
+++ b/src/popup.html
@@ -24,15 +24,37 @@
 
     <!-- Controls -->
     <main class="row control-wrap">
-        <button data-type="prev" title="Previous" class="btn ripple btn-control btn-prev">Previous</button>
-        <button data-type="pause" title="Play" class="btn ripple btn-control btn-pause">Play / Pause</button>
-        <button data-type="next" title="Next" class="btn ripple btn-control btn-next">Next</button>
+        <button data-type="prev"
+                data-ripple-color="#e74c3c"
+                title="Previous" class="btn ripple btn-control btn-prev">
+
+            <i class="icon icon-prev">Previous</i>
+        </button>
+
+        <button data-type="pause"
+                data-ripple-color="#e74c3c"
+                title="Play" class="btn ripple btn-control btn-pause">
+
+            <i class="icon icon-play">Play</i>
+            <i class="icon icon-pause">Pause</i>
+        </button>
+
+        <button data-type="next"
+                data-ripple-color="#e74c3c"
+                title="Next" class="btn ripple btn-control btn-next">
+
+            <i class="icon icon-next">Next</i>
+        </button>
     </main>
 
     <!-- footer area -->
     <footer class="row info-wrap">
-        <div><a class="js-settings" href="#settings">Settings</a></div>
-        <div>Made by <a target="_blank" class="js-author" href="https://twitter.com/hendrysadrak">@hendrysadrak</a>
+        <div class="ripple" title="Open Settings">
+            <a class="js-settings" href="#settings">Settings</a>
+        </div>
+
+        <div class="ripple" title="Made by Hendry Sadrak">Made by
+            <a target="_blank" class="link-author js-author" href="https://twitter.com/hendrysadrak">@hendrysadrak</a>
         </div>
     </footer>
 </div>
