update to 1.2.0 - fixing comatability issues

--- a/src/popup.html
+++ b/src/popup.html
@@ -25,38 +25,27 @@
     <!-- Controls -->
     <main class="row control-wrap">
         <button data-type="prev"
-                data-ripple-color="#e74c3c"
+                data-ripple-color="#ff6900"
                 title="Previous" class="btn ripple btn-control btn-prev">
 
             <i class="icon icon-prev">Previous</i>
         </button>
 
         <button data-type="pause"
-                data-ripple-color="#e74c3c"
-                title="Play" class="btn ripple btn-control btn-pause">
+                data-ripple-color="#ff6900"
+                title="Play" class="btn ripple btn-control btn-pause is-play">
 
             <i class="icon icon-play">Play</i>
             <i class="icon icon-pause">Pause</i>
         </button>
 
         <button data-type="next"
-                data-ripple-color="#e74c3c"
+                data-ripple-color="#ff6900"
                 title="Next" class="btn ripple btn-control btn-next">
 
             <i class="icon icon-next">Next</i>
         </button>
     </main>
-
-    <!-- footer area -->
-    <footer class="row info-wrap">
-        <div class="ripple" title="Open Settings">
-            <a class="js-settings" href="#settings">Settings</a>
-        </div>
-
-        <div class="ripple" title="Made by Hendry Sadrak">Made by
-            <a target="_blank" class="link-author js-author" href="https://twitter.com/hendrysadrak">@hendrysadrak</a>
-        </div>
-    </footer>
 </div>
 
 <script src="js/google-analytics-bundle.js"></script>
